fix overflow on mobile

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -2,8 +2,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  // -webkit-overflow-scrolling: touch;
-  // touch-action: manipulation;
+  -webkit-overflow-scrolling: touch;
+  touch-action: manipulation;
 }
 
 body {
